2000-07-05  Robin * Slomkowski <rslomkow@eazel.com>

	* mime-type-capplet/Makefile.am: fixed libgdk_pixbuf
	dependency.

2000-07-05  Dan Winship  <danw@helixcode.com>

	* modules/gconf-method.c: add #ifdef HAVE_ALLOCA_H

2000-07-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* libgnomevfs/gnome-vfs-types.h: Changed 
	'#include <gnome-vfs-file-size.h>' to 
	'#include <libgnomevfs/gnome-vfs-file-size.h>'

	* libgnomevfs/Makefile.am: Added gnome-vfs-file-size.h to
	libgnomevfsinclude_HEADERS

2000-07-06  Ian McKellar  <yakk@yakk.net.au>

	* libgnomevfs/gnome-vfs-private-utils.c: (gnome_vfs_create_temp):
	* libgnomevfs/gnome-vfs-seekable.c: (init_seek):
	Changed to use safe temp file functions. (bugzilla.eazel.com: 1001)

	* modules/http-method.c: (http_status_to_vfs_result):
	Updated HTTP result -> GnomeVFSResult mapping.

	* (do_create):
	Fixed create method a bit.
	

2000-07-05  Ian McKellar  <yakk@yakk.net.au>

	* modules/extfs-method.c: (get_dirname), (do_open_directory),
	(match), (find_next):
	SEGV fixes.

	(do_get_file_info):
	Implement a useful get_file_info (based off the existing 
	(open|read|close)_directory code.

	* modules/http-method.c: (my_strcmp), (do_move):
	Implement MOVE (using the HTTP/DAV MOVE method)

	* test/test-info.c: (print_file_info):
	Only print valid info fields.

2000-07-04  Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	(gnome_vfs_new_directory_with_unique_name):
	Make it possible for the unique name handling callback to detect
	a file system that supports only short names and supply an 
	8.3 name.

2000-07-04  Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-types.h:
	* libgnomevfs/gnome-vfs-utils.h:
	* libgnomevfs/gnome-vfs-xfer.c: (copy_file_data), (copy_file),
	(gnome_vfs_xfer_delete_items_common),
	(gnome_vfs_xfer_delete_items), (gnome_vfs_xfer_uri_internal):
	Add support for removing source files during an inter-volume move.
	Split up deletion code into a common routine for reuse.